--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!doctype html>
+
+
+
+
+
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -10,4 +15,8 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
+  <link
+  href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;700&display=swap"
+  rel="stylesheet"
+/>
 </html>
